# test-tantivy

./: .gitignore  Cargo.toml  README.md  index.html  package.json  rollup.config.js  tsconfig.json
benchmark/: package.json
benchmark/src/: App.css  App.tsx  benchmark.tsx
benchmark/src/lib/: benchmarkGenerator.ts  randomWords.ts  tantivy.ts  useBenchmark.ts
crate/: Cargo.toml
crate/src/: hashmap_directory.rs  index.rs  lib.rs  new_api.rs  utils.rs
src/: errors.rs  hashmap_directory.rs  index.rs  index.ts  index_slim.ts  lib.rs  main.rs  new_api.rs  tantivy.ts
src/example/: benchmark.ts
