[package]
name = "test-tantivy"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
tantivy = {git= "https://github.com/StyMaar/tantivy.git", branch="full-sync-0.16.1", default-features = false, features = ["lz4-compression"]}
tempfile = "3.3.0"
getrandom = {version = "0.2.5", features=["js"]}
uuid = {version = "0.8.2", features = ["stdweb"]}
wasm-bindgen = "0.2.79"
console_error_panic_hook = "0.1.7"
