[package]
name = "tantivy-js"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tantivy = {path="../../tantivy", default-features = false, features = ["lz4-compression"]}
tantivy = {git = "https://github.com/skiff-org/tantivy", branch = "wasm-ready-main", default-features = false, features = ["lz4-compression"]}
tempfile = "3.3.0"
getrandom = {version = "0.2.5", features=["js"]}
uuid = {version = "0.8.2", features = ["stdweb"]}
wasm-bindgen = "0.2.79"
console_error_panic_hook = "0.1.7"
rkyv = { version = "0.7.36", features = ["validation"] }
bytecheck = "0.6.7"
serde-wasm-bindgen = "0.4.2"
serde = "1.0.136"
sha-1 = "0.10.0"
serde_json = "1.0.79"
